src/test/deca/context/invalid/LE/sansReturn.deca
// Historique:
//    cree le 20/01/2022

class C1 {
    int a ;

    int fonction() {
        println("salut") ;
    }
}